--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
       "mongoose": "^9.0.1",
       "multer": "^2.0.2",
       "multer-storage-cloudinary": "^4.0.0",
-      "nodemailer": "^7.0.11"
+      "nodemailer": "^7.0.11",
+      "slugify": "^1.6.6"
    },
    "devDependencies": {
       "nodemon": "^3.1.11"
