avoid fake email

--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
       "mongoose": "^9.0.1",
       "multer": "^2.0.2",
       "multer-storage-cloudinary": "^4.0.0",
+      "node-cron": "^4.2.1",
       "nodemailer": "^7.0.11",
       "razorpay": "^2.9.6",
       "slugify": "^1.6.6"
