--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
       "multer-storage-cloudinary": "^4.0.0",
       "node-cron": "^4.2.1",
       "nodemailer": "^7.0.11",
+      "pdfkit": "^0.17.2",
+      "puppeteer": "^24.36.1",
       "razorpay": "^2.9.6",
       "slugify": "^1.6.6"
    },
